--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
     <name>meal_ordering_system</name>
     <packaging>war</packaging>
 
+    <repositories>
+    <repository>
+        <id>ali-maven</id>
+        <url>http://maven.aliyun.com/nexus/content/groups/public</url>
+    </repository>
+
+    </repositories>
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
