--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 
     <dependencies>
         <dependency>
+        <!--   lombok-->
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
