镜像源问题

--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,20 @@
     <packaging>war</packaging>
 
     <repositories>
-    <repository>
-        <id>ali-maven</id>
-        <url>http://maven.aliyun.com/nexus/content/groups/public</url>
-    </repository>
-
+        <repository>
+            <id>central</id>
+            <name>aliyun maven</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <layout>default</layout>
+            <!-- 是否开启发布版构件下载 -->
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <!-- 是否开启快照版构件下载 -->
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
     </repositories>
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
