--- a/pom.xml
+++ b/pom.xml
@@ -32,14 +32,14 @@
         <spring.version>5.0.2.RELEASE</spring.version>
         <slf4j.version>1.6.6</slf4j.version>
         <log4j.version>1.2.12</log4j.version>
-        <mysql.version>5.1.6</mysql.version>
+        <mysql.version>8.0.16</mysql.version>
         <mybatis.version>3.4.5</mybatis.version>
         <junit.version>5.7.0</junit.version>
     </properties>
 
     <dependencies>
         <dependency>
-        <!--   lombok-->
+            <!--   lombok-->
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.16</version>
@@ -111,7 +111,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.39</version>
+            <version>${mysql.version}</version>
         </dependency>
         <!-- druid -->
         <dependency>
