--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <welcome-file-list>
-        <welcome-file>public/admin/main.jsp</welcome-file>
+        <welcome-file>public/admin/index.jsp</welcome-file>
     </welcome-file-list>
     <!--加载项目启动监听的路径-->
     <context-param>
