--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <welcome-file-list>
-        <welcome-file>public/admin/index.jsp</welcome-file>
+        <welcome-file>qiantai</welcome-file>
     </welcome-file-list>
     <!--加载项目启动监听的路径-->
     <context-param>
@@ -27,6 +27,10 @@
         <load-on-startup>1</load-on-startup>
         <async-supported>true</async-supported>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>DispatcherServlet</servlet-name>
+        <url-pattern>/qiantai</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>DispatcherServlet</servlet-name>
